crates/pcb-zen/tests/snapshots/placeholder__snapshot_io_and_config_placeholders.snap
---
source: crates/pcb-zen/tests/placeholder.rs
assertion_line: 41
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "TEST")
      (footprint "stdlib_kicad-footprints_Resistor_SMD:R_0402_1005Metric")
      (libsource (lib "lib") (part "TEST") (description "unknown"))
      (sheetpath (names "sub.comp0") (tstamps "c36451f5-9361-5aad-8949-5d9502853fc5"))
      (tstamps "c36451f5-9361-5aad-8949-5d9502853fc5")
      (property (name "Reference") (value "U1"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"TEST\",\"qualifications\":[]}"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "TEST")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "V") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "VCC")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
  )
)
Advice: io() parameter 'pwr' should be UPPERCASE: 'PWR'
   ╭─[ [TEMP_DIR]my_sub.zen:3:1 ]
 3 │pwr = io(Net)
   │ ╰── io() parameter 'pwr' should be UPPERCASE: 'PWR'
